--- a/style.css
+++ b/style.css
@@ -104,3 +104,72 @@ ul.topmenu li.submenu:hover ul li:hover {
 	//background-color: #aaa; }
 ul.topmenu li.submenu:hover ul li:hover a { 
 	color: #e31a1c; }
+.background-image {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.toggle-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 800px;
+    transition: opacity 1s ease-in-out;
+}
+.ia {
+    background-image: url('img1.jpg');
+    z-index: -8;
+}
+.ia.show {
+    opacity: 1;
+}
+.ib {
+    background-image: url('img2.jpg');
+    z-index: -7;
+}
+.ib.show {
+    opacity: 1;
+}
+.ic {
+    background-image: url('img3.png');
+    z-index: -6;
+}
+.ic.show {
+    opacity: 1;
+}
+.id {
+    background-image: url('img4.jpg');
+    z-index: -5;
+}
+.id.show {
+    opacity: 1;
+}
+.ie {
+    background-image: url('img5.jpg');
+    z-index: -4;
+}
+.ie.show {
+    opacity: 1;
+}
+.if {
+    background-image: url('img6.jpg');
+    z-index: -3;
+}
+.if.show {
+    opacity: 1;
+}
+.ig {
+    background-image: url('img7.jpg');
+    z-index: -2;
+}
+.ig.show {
+    opacity: 1;
+}
+.ih {
+    background-image: url('img8.jpg');
+    z-index: -1;
+}
+.ih.show {
+    opacity: 1;
+}
