--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ ul.topmenu li.submenu:hover ul li:hover a {
 .ia {
     background-image: url('img1.jpg');
     z-index: -8;
+    opacity: 0;
 }
 .ia.show {
     opacity: 1;
@@ -127,6 +128,7 @@ ul.topmenu li.submenu:hover ul li:hover a {
 .ib {
     background-image: url('img2.jpg');
     z-index: -7;
+    opacity: 0;
 }
 .ib.show {
     opacity: 1;
@@ -134,6 +136,7 @@ ul.topmenu li.submenu:hover ul li:hover a {
 .ic {
     background-image: url('img3.png');
     z-index: -6;
+    opacity: 0;
 }
 .ic.show {
     opacity: 1;
