--- a/style.css
+++ b/style.css
@@ -104,40 +104,50 @@ ul.topmenu li.submenu:hover ul li:hover {
 	//background-color: #aaa; }
 ul.topmenu li.submenu:hover ul li:hover a { 
 	color: #e31a1c; }
+/* Basic background image styling. */
 .background-image {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
+
+/* Styles for the alternating / transition effect. */
 .toggle-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 800px;
-    transition: opacity 1s ease-in-out;
+ 	position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+ 	height: 800px;
+	transition: opacity 1s ease-in-out;
 }
-.ia {
-    background-image: url('img1.jpg');
-    z-index: -8;
-    opacity: 0;
+
+/* Styles for the specific images. */
+.first-image {
+	background-image: url('http://s169923.gridserver.com/images/dtlarooftop.jpg');	
+	z-index: -3;
+	opacity: 0;
 }
-.ia.show {
-    opacity: 1;
+
+.second-image {
+	background-image: url('http://s169923.gridserver.com/images/winterbarrel.jpg');
+	z-index: -2;
+	opacity: 0;
 }
-.ib {
-    background-image: url('img2.jpg');
-    z-index: -7;
-    opacity: 0;
+
+.third-image {
+	background-image: url('http://s169923.gridserver.com/images/catalinaharbor.jpg');
+	z-index: -1;
+	opacity: 0;
 }
-.ib.show {
-    opacity: 1;
+
+.first-image.show {
+	opacity: 1;
 }
-.ic {
-    background-image: url('img3.png');
-    z-index: -6;
-    opacity: 0;
+
+.second-image.show {
+	opacity: 1;
 }
-.ic.show {
-    opacity: 1;
+
+.third-image.show {
+	opacity: 1;
 }
