--- a/style.css
+++ b/style.css
@@ -117,25 +117,59 @@ ul.topmenu li.submenu:hover ul li:hover a {
 	width: 100%;
 	top: 0;
 	left: 0;
- 	height: 800px;
+ 	height: 100%;
 	transition: opacity 1s ease-in-out;
 }
 
 /* Styles for the specific images. */
 .first-image {
-	background-image: url('http://s169923.gridserver.com/images/dtlarooftop.jpg');	
+	background-image: url('img1.jpg');	
 	z-index: -3;
 	opacity: 0;
 }
 
 .second-image {
-	background-image: url('http://s169923.gridserver.com/images/winterbarrel.jpg');
+	background-image: url('img2.jpg');
 	z-index: -2;
 	opacity: 0;
 }
 
 .third-image {
-	background-image: url('http://s169923.gridserver.com/images/catalinaharbor.jpg');
+	background-image: url('img3.png');
+	z-index: -1;
+	opacity: 0;
+}
+
+.fourth-image {
+	background-image: url('img4.jpg');
+	z-index: -1;
+	opacity: 0;
+}
+
+
+.fifth-image {
+	background-image: url('img5.jpg');
+	z-index: -1;
+	opacity: 0;
+}
+
+
+.sixth-image {
+	background-image: url('img6.jpg');
+	z-index: -1;
+	opacity: 0;
+}
+
+
+.seventh-image {
+	background-image: url('img7.jpg');
+	z-index: -1;
+	opacity: 0;
+}
+
+
+.eigth-image {
+	background-image: url('img8.jpg');
 	z-index: -1;
 	opacity: 0;
 }
@@ -149,5 +183,30 @@ ul.topmenu li.submenu:hover ul li:hover a {
 }
 
 .third-image.show {
+	opacity: 1;
+}
+
+.fourth-image.show {
+	opacity: 1;
+}
+
+
+.fifth-image.show {
+	opacity: 1;
+}
+
+
+.sixth-image.show {
+	opacity: 1;
+}
+
+
+.seventh-image.show {
+	opacity: 1;
+	opacity: 0;
+}
+
+
+.eigth-image.show {
 	opacity: 1;
 }
