--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ footer{
 	font-family: Consolas;
 	font-size: 14px;
 	color: #fc4e2a;
-	background-color: #111;
 	margin: 0;
 	margin-top: 40px;
 	border-top-style: solid;
@@ -18,20 +17,17 @@ body {
 	font-family: Consolas;
 	font-size: 14px;
 	color: #fc4e2a;
-	background-color: #111; }
+}
 h1 {
 	text-align: center;
 	font-size: 5em;
 	color : #feb24c;
 	margin: 0;
-	margin-bottom: 7px;
-	padding: 4px;
+	padding: 20px;
 	letter-spacing: 0.3em;
 	text-shadow: 2px 2px 10px #777;
 	background-color: #111;
-	border-bottom-style: solid;
-	border-bottom-width: 0.5em;
-	border-bottom-color: #fc4e2a; }
+}
 h1 a {
 	text-decoration: none;
 	color: #feb24c; }
