--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
 	text-align: center;
 	font-size: 5em;
 	color : #feb24c;
-	margin: 0;
+	margin: 0 auto;
 	padding: 20px;
 	letter-spacing: 0.3em;
 	text-shadow: 2px 2px 10px #777;
@@ -32,6 +32,10 @@ h1 {
 h1 a {
 	text-decoration: none;
 	color: #feb24c; }
+.center{
+        display: block;
+	text-align: center;
+}
 h2 {
 	text-align: center;
 	font-size: 3em;
