--- a/style.css
+++ b/style.css
@@ -19,13 +19,10 @@ body {
 	color: #fc4e2a;
 }
 h1 {
-        display: inline-block;
+        display: inline;
 	text-align: center;
 	font-size: 5em;
 	color : #feb24c;
-	margin: 0 auto;
-	padding: 20px;
-	letter-spacing: 0.3em;
 	text-shadow: 2px 2px 10px #777;
 	background-color: #111;
 }
