--- a/style.css
+++ b/style.css
@@ -34,17 +34,12 @@ h1 a {
 	text-align: center;
 }
 h2 {
+	display: inline;
 	text-align: center;
 	font-size: 3em;
-	margin: 0;
-	margin-bottom: 4px;
-	padding: 2px;
 	text-shadow: 2px 2px 3px #666;
-	letter-spacing: 0.2em;
 	background-color: #111;
-	border-bottom-style: solid;
-	border-bottom-width: 0.2em;
-	border-bottom-color: #fc4e2a; }
+}
 h2 a {
 	text-decoration: none;
 	color: #fc4e2a; }
