--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ p {
 a {
 	color: #feb24c; }
 footer{
-        display: inline;
+        display: block;
 	text-align: center;
 	font-family: Consolas;
 	font-size: 14px;
@@ -25,9 +25,7 @@ h1 {
 	color : #feb24c;
 	text-shadow: 2px 2px 10px #777;
 	background-color: #111;
-	border-style: solid;
-	border-width: 0.1em;
-	border-color: #fc4e2a;
+	border : 1px solid #fc4e2a;
 }
 h1 a {
 	text-decoration: none;
@@ -42,9 +40,7 @@ h2 {
 	font-size: 3em;
 	text-shadow: 2px 2px 3px #666;
 	background-color: #111;
-	border-style: solid;
-	border-width: 0.1em;
-	border-color: #fc4e2a;
+	border : 1px solid #fc4e2a;
 }
 h2 a {
 	text-decoration: none;
