--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
 	text-shadow: 2px 2px 10px #777;
 	background-color: #111;
 	padding : 0.1em;
-	margin : 1px;
+	margin : 0.1em;
 	border : 1px solid #fc4e2a;
 }
 h1 a {
@@ -42,7 +42,6 @@ h2 {
 	font-size: 3em;
 	text-shadow: 2px 2px 3px #666;
 	background-color: #111;
-	padding : 0.1em;
 	margin : 1px;
 	border : 1px solid #fc4e2a;
 }
