--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ h1 {
 	color : #feb24c;
 	text-shadow: 2px 2px 10px #777;
 	background-color: #111;
-	padding : 0.1em;
-	margin : 0.1em;
+	padding : 0.2em;
+	margin-bottom : 0.3em;
 	border : 1px solid #fc4e2a;
 }
 h1 a {
@@ -42,6 +42,7 @@ h2 {
 	font-size: 3em;
 	text-shadow: 2px 2px 3px #666;
 	background-color: #111;
+	padding : 0.1m;
 	margin : 1px;
 	border : 1px solid #fc4e2a;
 }
