--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ p {
 a {
 	color: #feb24c; }
 footer{
-        display: block;
+        display: inline;
 	text-align: center;
 	font-family: Consolas;
 	font-size: 14px;
@@ -62,7 +62,7 @@ ul.topmenu li {
 	display: inline; 
 	list-style: none; 
 	position: relative; 
-	margin: 0px; 
+	margin-top: 30px; 
 	padding : 0px 15px 0px 0px; }
 ul.topmenu li ul { 
 	display: block; 
