--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ footer{
 	background-color: #111;
 }
 body {
+	
+	margin-top : 30px; 
 	font-family: Consolas;
 	font-size: 14px;
 	color: #fc4e2a;
