--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ footer{
 	border-style: solid;
 	border-width: 0.1em;
 	border-color: #fc4e2a;
-	background-color: #111;
+	background-color: #222; 
 }
 body {
 	font-family: Consolas;
@@ -26,7 +26,7 @@ h1 {
 	padding-left : 0.2em;
 	padding-right : 0.2em;
 	text-shadow: 2px 2px 10px #777;
-	background-color: #111;
+	background-color: #222; 
 	border : 1px solid #fc4e2a;
 }
 h1 a {
@@ -41,7 +41,7 @@ h2 {
 	text-align: center;
 	font-size: 3em;
 	text-shadow: 2px 2px 3px #666;
-	background-color: #111;
+	background-color: #222; 
 	border : 1px solid #fc4e2a;
 }
 h2 a {
@@ -53,7 +53,7 @@ ul.topmenu, ul.topmenu ul {
 	margin: 0px; 
 	padding: 0px; 
 	text-shadow: 1px 1px 3px #666;
-	background-color: #333; 
+	background-color: #222; 
 	font-size:2.5em; 
 	border-left : 1px solid #fc4e2a;
 	border-right : 1px solid #fc4e2a;
@@ -73,7 +73,7 @@ ul.topmenu li ul {
 	font-size:0.5em;
 	visibility: hidden; 
 	width: auto; 
-	background-color : #333; 
+	background-color: #222; 
 	border : 1px solid 
 	border-color : #fc4e2a; 
 	border-top: 0; }
@@ -89,7 +89,8 @@ ul.topmenu li ul li {
 	padding: 0; 
 	display: block; 
 	margin : 0px 0px 5px 0px; 
-	background-color : #333; }
+	background-color: #222; 
+}
 ul.topmenu li ul li a {
 	display: block; 
 	margin: 0; 
