--- a/style.css
+++ b/style.css
@@ -3,8 +3,23 @@ p {
 a {
 	color: #feb24c; }
 footer{
-	margin : 100%
         display: inline;
+	text-align: center;
+	font-family: Consolas;
+	font-size: 14px;
+	color: #fc4e2a;
+	border-style: solid;
+	border-width: 0.1em;
+	border-color: #fc4e2a;
+	background-color: #222; 
+}
+.footer {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	text-align: center;
+	display: inline;
 	text-align: center;
 	font-family: Consolas;
 	font-size: 14px;
