--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ footer{
 .footer {
 	position: absolute;
 	right: 0;
-	bottom: 0;
+	top: 0;
 	left: 0;
 	text-align: center;
 	font-family: Consolas;
@@ -31,6 +31,20 @@ body {
 	font-family: Consolas;
 	font-size: 14px;
 	color: #fc4e2a;
+}
+.header {
+	position: absolute;
+	right: 0;
+	top: 0;
+	left: 0;
+	text-align: center;
+	font-family: Consolas;
+	font-size: 14px;
+	color: #fc4e2a;
+	border-style: solid;
+	border-width: 0.1em;
+	border-color: #fc4e2a;
+	background-color: #222; 
 }
 h1 {
         display: inline;
