--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ footer{
 .footer {
 	position: absolute;
 	right: 0;
-	top: 0;
+	bottom: 0;
 	left: 0;
+        display: inline;
 	text-align: center;
 	font-family: Consolas;
 	font-size: 14px;
@@ -37,14 +38,15 @@ body {
 	right: 0;
 	top: 0;
 	left: 0;
+        display: inline;
 	text-align: center;
-	font-family: Consolas;
-	font-size: 14px;
-	color: #fc4e2a;
-	border-style: solid;
-	border-width: 0.1em;
-	border-color: #fc4e2a;
+	font-size: 5em;
+	color : #feb24c;
+	padding-left : 0.2em;
+	padding-right : 0.2em;
+	text-shadow: 2px 2px 10px #777;
 	background-color: #222; 
+	border : 1px solid #fc4e2a;
 }
 h1 {
         display: inline;
