--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 	border : 1px solid #fc4e2a;
 }
 h1 {
-        display: block;
+        display: inline;
 	text-align: center;
 	font-size: 5em;
 	color : #feb24c;
