--- a/style.css
+++ b/style.css
@@ -77,10 +77,11 @@ h2 {
 }
 h2 a {
 	text-decoration: none;
-	color: #fc4e2a; }
+	color: #fc4e2a; 
+}
 ul.topmenu, ul.topmenu ul { 
 	display: inline; 
-    	position: relative;
+    	top: 10%;
 	text-align: center; 
 	margin: 0px; 
 	padding: 0px; 
