--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1 a {
 	text-align: center;
 }
 .centercontext{
-	margin : 20px;
+	padding-bottom : 0.1em;
         display: block;
 	text-align: center;
 }
