--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1 a {
 	text-align: center;
 }
 .centercontext{
-	padding-bottom : 0.1em;
+	padding-bottom : 10px;
         display: block;
 	text-align: center;
 }
@@ -86,7 +86,6 @@ h2 a {
 }
 ul.topmenu, ul.topmenu ul { 
 	display: inline; 
-    	top: 10%;
 	text-align: center; 
 	margin: 0px; 
 	padding: 0px; 
