--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1 a {
 	text-align: center;
 }
 .centercontext{
-	padding-bottom : 15px;
+        padding-bottom : 20x;
         display: block;
 	text-align: center;
 }
