--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1 a {
 	text-align: center;
 }
 .centercontext{
-        padding-bottom : 20x;
+        padding-bottom : 10x;
         display: block;
 	text-align: center;
 }
@@ -85,7 +85,8 @@ h2 a {
 	color: #fc4e2a; 
 }
 ul.topmenu, ul.topmenu ul { 
-	display: inline; 
+	display: inline;    	
+	top: 10%;
 	text-align: center; 
 	margin: 0px; 
 	padding: 0px; 
