--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1 a {
 	text-align: center;
 }
 .centercontext{
-        margin-top : 10px;
+        margin-top : 0.1em;
         display: block;
 	text-align: center;
 }
