--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h1 {
 	font-size: 5em;
 	color : #feb24c;
 	padding-left : 0.2em;
-	padding-bottom : 0.1em;
+	padding-bottom : 6px;
 	padding-right : 0.2em;
 	text-shadow: 2px 2px 10px #777;
 	background-color: #222; 
@@ -68,7 +68,7 @@ h1 a {
 	text-align: center;
 }
 .centercontext{
-        margin-top : 8px;
+        margin-top : 7px;
         display: block;
 	text-align: center;
 }
