--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 	border : 1px solid #fc4e2a;
 }
 h1 {
-        display: inline;
+        display: block;
 	text-align: center;
 	font-size: 5em;
 	color : #feb24c;
@@ -68,7 +68,7 @@ h1 a {
 	text-align: center;
 }
 .centercontext{
-        margin-top : 6px;
+        margin-top : 7px;
         display: block;
 	text-align: center;
 }
@@ -85,7 +85,7 @@ h2 a {
 	color: #fc4e2a; 
 }
 ul.topmenu, ul.topmenu ul { 
-	display: inline;    	
+	display: block;    	
 	text-align: center; 
 	margin: 0px; 
 	padding: 0px; 
