--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ ul.topmenu, ul.topmenu ul {
 	position: absolute;
 	bottom: 90%;
 	right: 0;
-	top: 0;
+	top: 5%;
 	left: 0;
 	display: block;    	
 	text-align: center; 
