--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ body {
 	background-color: #222; 
 	border : 1px solid #fc4e2a;
 }
+.header a{
+	text-decoration: none;
+	color: #feb24c;
+}
 h1 {
         display: block;
 	text-align: center;
@@ -67,11 +71,6 @@ h1 a {
         display: block;
 	text-align: center;
 }
-.centercontext{
-        margin-top : 67px;
-        display: block;
-	text-align: center;
-}
 h2 {
 	display: block;
 	text-align: center;
@@ -87,7 +86,7 @@ h2 a {
 ul.topmenu, ul.topmenu ul { 
 	position: absolute;
 	right: 0;
-	top: 80px;
+	top: 85px;
 	left: 0;
 	display: block;    	
 	text-align: center; 
