--- a/style.css
+++ b/style.css
@@ -46,7 +46,10 @@ body {
 	padding-right : 0.2em;
 	text-shadow: 2px 2px 10px #777;
 	background-color: #222; 
-	border : 1px solid #fc4e2a;
+	border-bottom : 5px solid #fc4e2a;
+	border-left : 1px solid #fc4e2a;
+	border-right : 1px solid #fc4e2a;
+	border-top : 1px solid #fc4e2a;
 }
 .header a{
 	text-decoration: none;
