--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 	color : #feb24c;
 	padding-left : 0.2em;
 	padding-right : 0.2em;
+	padding-bottom : 0.1em;
 	text-shadow: 2px 2px 10px #777;
 	background-color: #222; 
 	border-bottom : 5px solid #fc4e2a;
@@ -91,7 +92,7 @@ h2 a {
 ul.topmenu, ul.topmenu ul { 
 	position: absolute;
 	right: 0;
-	top: 85px;
+	top: 100px;
 	left: 0;
 	display: block;    	
 	text-align: center; 
